--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --progress --colors"
+    "start": "webpack-dev-server"
   },
   "author": "Coder",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^2.4.1",
     "webpack-hot-middleware": "^2.17.1"
   },
   "dependencies": {
